chore(kffi): drop dead JVM conversions, correct engine KDoc and plan record